# cholesteatoma-hearing-prediction

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
configs/: figS1_roi_localization_and_error.yaml  figS2_yyplot_primary_ac.yaml  figS4_gradcam_overlays.yaml  figS5_gradcam_where_ratio.yaml  figS6_gate_behavior.yaml  figure2_primary_ac.yaml  figure3_abg_leq20.yaml  full_pipeline_repro_oldrun.yaml  full_pipeline_user.yaml  gradcam_case_selection.yaml  gradcam_generate.yaml  gradcam_run_and_panel.yaml  gradcam_where_ratio.yaml  pred_center_manuscript_qa.yaml  roi_autogen.yaml  roi_autogen_user.yaml  sphere_roi_user.yaml  supp_error_distribution_primary_ac.yaml  supp_gate_behavior.yaml  supp_roi_center_error_hist_cdf.yaml  supp_yyplot_primary_ac.yaml  train_tabular.yaml
docs/: FIGURE_AND_INTERPRETABILITY_LAYOUT.md  MIGRATION_NOTES.md
scripts/: compute_gradcam_where_ratio.py  make_fig2_primary_ac.py  make_fig3_abg_leq20.py  make_figS1_roi_localization_and_error.py  make_figS2_yyplot_primary_ac.py  make_figS3_cdf_primary_ac.py  make_figS4_gradcam_overlays.py  make_figS5_gradcam_where_ratio.py  make_figS6_gate_behavior.py  make_gradcam.py  make_gradcam_case_selection.py  make_per_patient_results.py  make_pred_center_manuscript_qa.py  make_sphere_roi.py  make_supp_error_distribution_primary_ac.py  make_supp_gate_behavior.py  make_supp_roi_center_error_hist_cdf.py  make_supp_yyplot_primary_ac.py  prepare_analysis_table.py  run_full_pipeline.py  run_resid_gradcam_and_panel.py  run_roi_autogen.py  run_train_gated.py  run_train_residual.py  (+1 more)
(+71 files in other folders)
