[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chole-predict"
version = "0.1.0"
description = "Multimodal fusion for postoperative hearing prediction after tympanoplasty of cholesteatoma"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "pyyaml",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
